--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
   <head>
@@ -14,33 +13,31 @@
       body {
         font-family: 'IBM Plex Sans Arabic', sans-serif;
         background-color: #0C0E1C;
-        color: #FFFFFF;
+        margin: 0;
+        overflow-x: hidden;
+        color: white;
       }
-      ::-webkit-scrollbar {
-        width: 8px;
+      #root {
+        min-height: 100vh;
       }
-      ::-webkit-scrollbar-track {
-        background: #0C0E1C;
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #2C3668;
-        border-radius: 4px;
-      }
-      ::-webkit-scrollbar-thumb:hover {
-        background: #F3C14F;
+      /* تحسين سلاسة التمرير */
+      html {
+        scroll-behavior: smooth;
       }
     </style>
-  <script type="importmap">
+    <script type="importmap">
 {
   "imports": {
+    "react": "https://esm.sh/react@18.2.0",
+    "react-dom": "https://esm.sh/react-dom@18.2.0",
+    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
+    "lucide-react": "https://esm.sh/lucide-react@0.344.0?external=react",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3"
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
-</head>
+  </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
